--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,12 @@ name: Java CI
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request:
     branches:
-      - develop
+      - main
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 * * * 1-5'
 
 jobs:
   build:
